Converts to aws lambda

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BASE_URI=http://ec2-54-234-176-9.compute-1.amazonaws.com:3001
+REACT_APP_BASE_URI=https://3sog05iwzb.execute-api.us-east-1.amazonaws.com/prd
