Adds all the minting logic and setup

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_BASE_URI=https://3sog05iwzb.execute-api.us-east-1.amazonaws.com/prd
+REACT_APP_NETWORK_ID=5
+REACT_APP_PIXEL_CONTRACT=0xDE9fAA62c072f950aC5EccDF03343f158F1ba3f5
