--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_BASE_URI=https://3sog05iwzb.execute-api.us-east-1.amazonaws.com/prd
+REACT_APP_BASE_URI_NEW=https://l50dgk9ahk.execute-api.us-east-1.amazonaws.com/dev
 REACT_APP_NETWORK_ID=1
 REACT_APP_PIXEL_CONTRACT=0x1fb7b8ad0C8368Db5463b34D5EA58778706D580e
 REACT_APP_BAE_TOKEN=0xC6c3622723F06B3E98D351b2BE2e851D23EECeAf
