--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "hashlips",
   "homepage": ".",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.10.7",
     "@tanstack/react-virtual": "^3.0.0-beta.17",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -18,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-outside-click-handler": "^1.3.0",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
