--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.7",
+    "@stromsky/react-animate-on-scroll": "^2.1.8",
     "@tanstack/react-virtual": "^3.0.0-beta.17",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "animate.css": "^4.1.1",
-    "aos": "^2.3.4",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
     "ethers": "^5.6.9",
+    "gsap": "^3.11.3",
     "react": "^18.2.0",
-    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-outside-click-handler": "^1.3.0",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
