--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_NETWORK_ID=5
 REACT_APP_PIXEL_CONTRACT=0x822BdAeFCee07c1043B3638eEd84E1DC2dDfd4e1
 REACT_APP_BAE_TOKEN_PRD=0xC6c3622723F06B3E98D351b2BE2e851D23EECeAf
 REACT_APP_BAE_TOKEN=0x1fb7b8ad0C8368Db5463b34D5EA58778706D580e
+REACT_APP_BAE_BOX=0xBc7A03ff9EF325f7c31cdbaf0994B7C73389DA6F
